added project link

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
                                 <li>Работа с ML</li>
                                 <li>Менторство от МТС Senior Developer</li>
                                 <li>Команда из 4 человек</li>
+                                <li>
+                                    <a href=https://github.com/Vlad-Ali/news-recommendation-service
+                                       class="project-link" 
+                                       target="_blank" 
+                                       rel="noopener noreferrer">
+                                        Ссылка на проект
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </article>
