fixed discription bug

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h2 class="section-title">Обо мне</h2>
                 <div class="about-content">
                     <p class="about-text">
-                        Родился и вырос в Челябинске. Люблю путешествовать и заниматься спортом, а по выходным ходить с пацанами в компы. Сейчас обучаюсь на 1-ом курсе МФТИ и планиирую стать востребованным Java разработчиком.
+                        Родился и вырос в Челябинске. Люблю путешествовать и заниматься спортом, а по выходным ходить с пацанами в компы. Сейчас обучаюсь на 1-ом курсе МФТИ и планирую стать востребованным Java разработчиком.
                     </p>
                 </div>
             </div>
