--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
                 <button class="btn contact-btn">Связаться со мной</button>
             </div>
         </section>
+
+        <svg class="scroll-draw" viewBox="0 0 500 10">
+            <path class="draw-path" 
+                  d="M0 5 L500 5"
+                  stroke="#64ffda" 
+                  fill="none" 
+                  stroke-width="2"/>
+          </svg>
     </main>
 
     <footer class="footer">
